--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,11 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/.*",
       "dest": "app.js"
     }
-  ]
+  ],
+  "env": {
+    "PORT": "3000"
+  }
 }
